Moved logo styles into the css files for the cache renaming to work.

--- a/html/app/styles/request.scss
+++ b/html/app/styles/request.scss
@@ -68,6 +68,13 @@ h1 {
 	}
 }
 
+// Logos
+.logo-reddit		{ background-image: url(../images/logos/reddit.png); }
+.logo-shoutcast		{ background-image: url(../images/logos/shoutcast.png); }
+.logo-soundcloud	{ background-image: url(../images/logos/soundcloud.png); }
+.logo-twitch		{ background-image: url(../images/logos/twitch.png); }
+.logo-youtube		{ background-image: url(../images/logos/youtube.png); }
+
 .notice {
 	text-align: center;
 	color: rgba(255,255,255,0.44);
