--- a/html/app/styles/request.scss
+++ b/html/app/styles/request.scss
@@ -1,5 +1,13 @@
 @import "lib/normalize";
 
+@mixin clearfix {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
 html, body {
 	width: 100%;
 	height: 100%;
@@ -40,12 +48,16 @@ h1 {
 .services {
 	text-align: center;
 	font-size: 0;
+	max-width: 540px;
+
+	@include clearfix;
 
 	> .media-service {
-		display: inline-block;
 		width: 120px;
 		height: 120px;
 		margin: 30px;
+
+		display: inline-block;
 
 		background-color: #EEE;
 		background-repeat: no-repeat;
