--- a/html/app/styles/request.scss
+++ b/html/app/styles/request.scss
@@ -102,12 +102,13 @@ h1 {
 }
 
 .url-notice {
-	margin: 30px 0 20px 0;
+	margin: 0 0 20px 0;
 }
 
 .url-container {
 	width: 480px;
 	text-align: center;
+	margin-bottom: 10px;
 }
 
 .url-input {
@@ -167,4 +168,27 @@ h1 {
 		width: 110px;
 		height: 110px;
 	}
+}
+
+.metastream {
+	display: block;
+	max-width: 600px;
+	font-size: 18pt;
+	font-weight: bold;
+	margin: 10px 20px 0 20px;
+	padding: 16px 24px;
+	text-align: center;
+	text-decoration: none;
+	color: #fff;
+	line-height: 28pt;
+	letter-spacing: 0.5px;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+	border-radius: 4px;
+	background: -webkit-linear-gradient(-60deg, #6f749e 0%, #9a8daf 31%, #d0a8b9 58%, #f8bbb1 100%);
+}
+
+.metastream-link {
+	color: #2c84e2;
+	text-decoration: underline;
+	text-shadow: none;
 }
